# smart-oak-insurance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LESSONS_LEARNED.md  README.md  STRATEGY.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: ai_ml_architect.agent.md
data/: __init__.py  archetypes_claims.py  archetypes_underwriting.py  config.py  generator.py  graph_builder.py  graph_features.py  states.py  validator.py
data/entities/: __init__.py  entity_address.py  entity_person.py  entity_phone.py  entity_policy.py  entity_vehicle.py
doc/: Cheat_Sheet.md  Fraud_Detection_Architecture.md  Risk_Scoring_Architecture.md  Troubleshooting.md  graph_diagram.py
doc/implementation/: DATA_GEN_GUIDE.md  DECISION_LOG.md  FEATURE_STORE_GUIDE.md
features/: __init__.py  feature_definitions.py  feature_store_client.py  offline_pipeline.py  online_serving.py
tests/unit/: test_data_generator.py  test_feature_store.py  test_risk_scoring.py
underwriting/models/risk_scoring/: calibrate.py  hurdle_model.py  train_frequency.py  train_severity.py
