[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-oak-insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "numpy>=2.0",
    "pandas>=2.1.0",
    "pyarrow>=12.0.0",
    "faker>=23.0.0",
    "redis>=5.0",
    "neo4j>=6.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=24.0.0",
    "ruff>=0.0.300",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["features*", "data*"]
